// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: CostEditor should show a blank widget 1`] = `
<div
  className="base-tag-container nice-tags-container tag-value-container"
>
  <div
    className="nice-dropdown nice-form-control"
  >
    <button
      className="nice-btn"
      onClick={[Function]}
    >
      Add...
      <i
        className="icon fa-angle-down"
      />
    </button>
    <ul
      className="dropdown-menu"
      onClick={[Function]}
    >
      <li
        className={null}
        data-value="cp"
        onClick={[Function]}
      >
        <a>
          Copper
        </a>
      </li>
      <li
        className={null}
        data-value="sp"
        onClick={[Function]}
      >
        <a>
          Silver
        </a>
      </li>
      <li
        className={null}
        data-value="ep"
        onClick={[Function]}
      >
        <a>
          Electrum
        </a>
      </li>
      <li
        className={null}
        data-value="gp"
        onClick={[Function]}
      >
        <a>
          Gold
        </a>
      </li>
      <li
        className={null}
        data-value="pp"
        onClick={[Function]}
      >
        <a>
          Platinum
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Component: CostEditor should show coins in provided order 1`] = `
<div
  className="base-tag-container nice-tags-container tag-value-container"
>
  <div
    className="nice-dropdown nice-form-control"
  >
    <button
      className="nice-btn"
      onClick={[Function]}
    >
      Add...
      <i
        className="icon fa-angle-down"
      />
    </button>
    <ul
      className="dropdown-menu"
      onClick={[Function]}
    >
      <li
        className={null}
        data-value="ep"
        onClick={[Function]}
      >
        <a>
          Electrum
        </a>
      </li>
      <li
        className={null}
        data-value="pp"
        onClick={[Function]}
      >
        <a>
          Platinum
        </a>
      </li>
    </ul>
  </div>
  <div
    className="nice-tag"
  >
    <span
      className="nice-tag-label"
    >
      Gold
    </span>
    <span
      className="nice-tag-badge"
    >
      <input
        disabled={false}
        onChange={[Function]}
        type="number"
        value={5}
      />
    </span>
    <button
      className="nice-tag-btn"
      onClick={[Function]}
    >
      <i
        className="icon fa-trash-o"
      />
    </button>
  </div>
  <div
    className="nice-tag"
  >
    <span
      className="nice-tag-label"
    >
      Copper
    </span>
    <span
      className="nice-tag-badge"
    >
      <input
        disabled={false}
        onChange={[Function]}
        type="number"
        value={5}
      />
    </span>
    <button
      className="nice-tag-btn"
      onClick={[Function]}
    >
      <i
        className="icon fa-trash-o"
      />
    </button>
  </div>
  <div
    className="nice-tag"
  >
    <span
      className="nice-tag-label"
    >
      Silver
    </span>
    <span
      className="nice-tag-badge"
    >
      <input
        disabled={false}
        onChange={[Function]}
        type="number"
        value={5}
      />
    </span>
    <button
      className="nice-tag-btn"
      onClick={[Function]}
    >
      <i
        className="icon fa-trash-o"
      />
    </button>
  </div>
</div>
`;
